// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package phuvo.customGrpc.helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHello2 (HelloRequest2) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc GetProductList(GetProductListRequest) returns (GetProductListResponse){}
  rpc AddProduct(AddProductRequest) returns (AddProductResponse){}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string age = 10;
}
message HelloRequest2 {
  string name = 1;
  string age = 10;
}
// The response message containing the greetings
message HelloReply {
  string message = 1;
}


message GetProductListRequest{
}
message GetProductListResponse{
  string message = 1;
}

message AddProductRequest{
  string name = 2;
  string price = 3;
}
message AddProductResponse{
  string id = 1;
  string code = 2;
  string message = 3;
}

// DELETE product
message DeleteProductRequest{
  string id = 1;
}
message DeleteProductResponse{
  string id = 1;
  string code = 2;
  string message = 3;
}